# sub_webcam

./: README.md
offb/: CMakeLists.txt
offb/src/: camera.cpp  gst_command_line.sh  gst_cpp.cpp  gst_receiver.py
